<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="15dp"
    android:orientation="vertical"
    tools:context="com.washhous.laundryapp.SignInFacebook" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="70dp"
        android:gravity="center_horizontal"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/edt_username_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_black_border"
        android:hint="@string/hint_username"
        android:padding="5dp"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/edt_password_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@drawable/rounded_black_border"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textSize="19sp" />

    <Button
        android:id="@+id/btn_signin_facebook"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/label_sign_in"
        android:textSize="19sp" />

</LinearLayout>