<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    tools:context="com.washhous.laundryapp.SignIn" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/img_logo_signin_option"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:src="@drawable/logo" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_black_border"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/mail" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:background="#5f5c5e" />

                <EditText
                    android:id="@+id/edt_emailid"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/hint_email_id"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="5dp"
                    android:text=""
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_black_border"
                android:gravity="center_vertical"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:padding="5dp"
                    android:src="@drawable/key" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0"
                    android:background="#5f5c5e" />

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:paddingLeft="5dp"
                    android:text=""
                    android:textSize="15sp" />
            </LinearLayout>

            <TextView
                android:id="@+id/txt_forgor_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/link_label_forgot_password"
                android:textColor="@color/blue"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/button_blue"
        android:text="@string/label_sign_in"
        android:textColor="@color/white"
        android:textSize="15sp" />

</RelativeLayout>