<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="com.washhous.laundryapp.SignUp" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/img_back_from_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@drawable/back" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="Signup"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="7dp"
            android:background="@color/black_light" >
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/curved_black_border"
                    android:orientation="vertical" >

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <EditText
                            android:id="@+id/edt_first_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_black_border"
                            android:hint="@string/hint_first_name"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edt_last_name"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="10dp"
                            android:layout_marginTop="20dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_black_border"
                            android:hint="@string/hint_last_name"
                            android:padding="5dp"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:orientation="vertical" >

                        <EditText
                            android:id="@+id/edt_emailid_signup"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_black_border"
                            android:hint="@string/hint_email_id"
                            android:inputType="textEmailAddress"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edt_phone_number"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_black_border"
                            android:hint="@string/hint_phone_number"
                            android:inputType="number"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edt_address"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/rounded_black_border"
                            android:hint="@string/hint_address"
                            android:padding="5dp"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <Spinner
                            android:id="@+id/spn_country"
                            style="@style/spinner_style"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <Spinner
                            android:id="@+id/spn_state"
                            style="@style/spinner_style"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:padding="5dp"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:weightSum="2" >

                        <EditText
                            android:id="@+id/edt_city"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_black_border"
                            android:hint="@string/hint_city"
                            android:padding="5dp"
                            android:textSize="15sp" />

                        <EditText
                            android:id="@+id/edt_postal_code"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_marginRight="5dp"
                            android:layout_weight="1"
                            android:background="@drawable/rounded_black_border"
                            android:hint="@string/hint_postal_code"
                            android:padding="5dp"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <EditText
                        android:id="@+id/edt_password_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_black_border"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/rounded_black_border"
                        android:hint="@string/hint_confirm_password"
                        android:inputType="textPassword"
                        android:padding="5dp"
                        android:textSize="15sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal" >

                        <CheckBox
                            android:id="@+id/chk_terms_and_condition"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:textColor="@color/blue"
                            android:textSize="15sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_term_and_condition"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="I ACCEPT TERMS AND CONDITION"
                            android:textColor="@color/blue" />
                    </LinearLayout>

                  
                    <Button
                        android:id="@+id/btn_submit_signup"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/blue"
                        android:text="@string/label_submit"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal" >

                    <View
                        android:layout_width="0dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/blue" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:gravity="center_horizontal"
                        android:text="OR"
                        android:textColor="@color/blue"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="7dp"
                        android:layout_gravity="center"
                        android:layout_weight="1"
                        android:background="@color/blue" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/curved_black_border"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/btn_option_signup_facebook"
                        android:layout_width="fill_parent"
                        android:layout_height="35dp"
                        android:layout_marginBottom="15dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="18dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/facebook"
                        android:drawableLeft="@drawable/facebook_icon"
                        android:drawablePadding="-20dp"
                        android:text="@string/label_signup_facebook"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>